@@ -2,6 +2,7 @@ package net.momirealms.craftengine.core.item;
 
 import com.google.gson.JsonElement;
 import net.kyori.adventure.text.Component;
+import net.momirealms.craftengine.core.attribute.AttributeModifier;
 import net.momirealms.craftengine.core.item.data.Enchantment;
 import net.momirealms.craftengine.core.item.data.FireworkExplosion;
 import net.momirealms.craftengine.core.item.data.JukeboxPlayable;
@@ -9,13 +10,14 @@ import net.momirealms.craftengine.core.item.data.Trim;
 import net.momirealms.craftengine.core.item.setting.EquipmentData;
 import net.momirealms.craftengine.core.plugin.CraftEngine;
 import net.momirealms.craftengine.core.util.AdventureHelper;
+import net.momirealms.craftengine.core.util.Color;
 import net.momirealms.craftengine.core.util.Key;
+import net.momirealms.craftengine.core.util.UniqueKey;
 import net.momirealms.sparrow.nbt.Tag;
 
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public abstract class ItemFactory<W extends ItemWrapper<I>, I> {
     protected final CraftEngine plugin;
@@ -37,7 +39,7 @@ public abstract class ItemFactory<W extends ItemWrapper<I>, I> {
 
     protected abstract Object getJavaTag(W item, Object... path);
 
-    protected abstract Tag getNBTTag(W item, Object... path);
+    protected abstract Tag getTag(W item, Object... path);
 
     protected abstract void setTag(W item, Object value, Object... path);
 
@@ -48,6 +50,10 @@ public abstract class ItemFactory<W extends ItemWrapper<I>, I> {
     protected abstract void setComponent(W item, Object type, Object value);
 
     protected abstract Object getExactComponent(W item, Object type);
+
+    protected abstract Object getExactTag(W item, Object... path);
+
+    protected abstract void setExactComponent(W item, Object type, Object value);
 
     protected abstract Object getJavaComponent(W item, Object type);
 
@@ -107,7 +113,7 @@ public abstract class ItemFactory<W extends ItemWrapper<I>, I> {
 
     protected void loreComponent(W item, List<Component> component) {
         if (component != null && !component.isEmpty()) {
-            loreJson(item, component.stream().map(AdventureHelper::componentToJson).collect(Collectors.toList()));
+            loreJson(item, component.stream().map(AdventureHelper::componentToJson).toList());
         } else {
             loreJson(item, null);
         }
@@ -131,9 +137,9 @@ public abstract class ItemFactory<W extends ItemWrapper<I>, I> {
 
     protected abstract void damage(W item, Integer damage);
 
-    protected abstract Optional<Integer> dyedColor(W item);
+    protected abstract Optional<Color> dyedColor(W item);
 
-    protected abstract void dyedColor(W item, Integer color);
+    protected abstract void dyedColor(W item, Color color);
 
     protected abstract int maxDamage(W item);
 
@@ -202,4 +208,10 @@ public abstract class ItemFactory<W extends ItemWrapper<I>, I> {
     protected abstract W transmuteCopy(W item, Key newItem, int amount);
 
     protected abstract W unsafeTransmuteCopy(W item, Object newItem, int count);
+
+    protected abstract boolean isEmpty(W item);
+
+    protected abstract UniqueKey recipeIngredientID(W item);
+
+    protected abstract void attributeModifiers(W item, List<AttributeModifier> modifiers);
 }
